2003-05-27  Christoph Steckelberg <heffer@mailberlin.net>

		Spell uses ${INSTALL_ROOT}


2003-04-04  M.L. <mlubrano@sourcemage.org>

                Added missing MD5 on PRE_BUILD file.
		Set LICENCE to UNKNOWN


2002-08-30  Christoph Steckelberg <heffer@mailberlin.net>

		Changed MAINTAINER-tag - fixes bug #760


2002-08-21  Christoph Steckelberg <heffer@mailberlin.net>

		changed HISTORY file format
		recalculated MD5SUM on unpacked source
		updated MAINTAINER-tag


2002-08-17  Christoph Steckelberg <heffer@mailberlin.net>

		changed LICENCE to LICENSE[0]
		changed MD5 to MD5[0]


2002-06-19  Christoph Steckelberg <heffer@mailberlin.net>

        	Added MD5-Field to spell


2002-06-10  Christoph Steckelberg <heffer@mailberlin.net>

		Added LICENCE tag to DETAILS


2002-04-29  <djcomputer@gmx.net>

		added spell to section