@@ -1,3 +1,8 @@
+2004-01-09  Christoph Steckelberg <heffer@mailberlin.net>
+
+		* zoo-gcc3.3.patch: Patching several files for gcc3.3 compatibility
+
+
 2003-05-27  Christoph Steckelberg <heffer@mailberlin.net>
 
 		Spell uses ${INSTALL_ROOT}
